--- a/_includes/block-materialize_navbar.html
+++ b/_includes/block-materialize_navbar.html
@@ -1,4 +1,13 @@
-  <nav>
+<header class="block block-materialize_navbar.html">
+
+  <div class="block-block-materialize_navbar.html">
+    <a href="{{ site.url | relative_url }}">
+      <img src="{{ section.logo | relative_url }}" alt="{{ site.title }}">
+    </a>
+  </div>  
+
+
+<nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -8,3 +17,5 @@
       </ul>
     </div>
   </nav>
+
+  </header>
