--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
     
-    <link rel="stylesheet" href="oren.css"/>
+    <link rel="stylesheet" type="text/css" href="./oren.css"/>
     
     <!link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.2.1/firebaseui.css" />
