--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
     <meta name="description" content="{{ site.description }}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="./oren.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
+    <link href="./oren.css" rel="stylesheet" type="text/css"/>
+    <!link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
     
    
     
