--- a/_includes/block-text-2.html
+++ b/_includes/block-text-2.html
@@ -1,9 +1,9 @@
 
 <section class="block block-text-2">
   <div class="container">
-    <div class="columns">
+    <div class="row">
       <div class="column headline">
-        <h3>{{ section.headline }}</h3>
+        <h2>{{ section.headline }}</h2>
       </div>
       <div class="column text">
         {{ section.content }}
@@ -11,3 +11,6 @@
     </div>
   </div>
 </section>
+
+
+
