--- a/_includes/block-text-2.html
+++ b/_includes/block-text-2.html
@@ -8,6 +8,12 @@
       <div class="column text">
         {{ section.content }}
       </div>
+      <div class="column headline">
+        <h2>{{ section.headline }}</h2>
+      </div>
+      <div class="column text">
+        {{ section.content }}
+      </div>
     </div>
   </div>
 </section>
