--- a/_includes/block-text-2.html
+++ b/_includes/block-text-2.html
@@ -3,16 +3,16 @@
   <div class="container">
     <div class="row">
       <div class="column headline">
-        <h2>{{ section.headline }}</h2>
+        <h2>{{ section.col_1.headline }}</h2>
       </div>
       <div class="column text">
-        {{ section.content }}
+        {{ section.col1.content }}
       </div>
       <div class="column headline">
-        <h2>{{ section.headline }}</h2>
+        <h2>{{ section.col_2.headline }}</h2>
       </div>
       <div class="column text">
-        {{ section.content }}
+        {{ section.col_2.content }}
       </div>
     </div>
   </div>
