--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -13,6 +13,10 @@
         <h3>{{ section.col_3.headline }}</h3>
         <p>{{ section.col_3.content }}</p>
       </div>            
+      <div class="col s12 m4">
+        <h3>{{ section.col_3.headline }}</h3>
+        <p>{{ section.col_3.content }}</p>
+      </div>            
     </div>
   </div>
 </section>
