--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -6,15 +6,15 @@
         <p>{{ section.col_1.content }}</p>
       </div>
       <div class="col s12 m3">
-        <h5><center>{{ section.col_2.headline }}}</center></h5>
+        <h5><center>{{ section.col_2.headline }}</center></h5>
         <p>{{ section.col_2.content }}</p>
       </div>
       <div class="col s12 m3">
-        <h5><center>{{ section.col_3.headline }}}</center></h5>
+        <h5><center>{{ section.col_3.headline }}</center></h5>
         <p>{{ section.col_3.content }}</p>
       </div>            
       <div class="col s12 m3">
-        <h5><center>{{ section.col_4.headline }}}</center></h5>
+        <h5><center>{{ section.col_4.headline }}</center></h5>
         <p>{{ section.col_4.content }}</p>
       </div>            
     </div>
