--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -3,19 +3,19 @@
     <div class="row">
       <div class="col s12 m3">
         <h5><center>{{ section.col_1.headline }}</center></h5>
-        <p>{{ section.col_1.content }}</p>
+        <p><center>{{ section.col_1.content }}</center></p>
       </div>
       <div class="col s12 m3">
         <h5><center>{{ section.col_2.headline }}</center></h5>
-        <p>{{ section.col_2.content }}</p>
+        <p><center>{{ section.col_2.content }}</center></p>
       </div>
       <div class="col s12 m3">
         <h5><center>{{ section.col_3.headline }}</center></h5>
-        <p>{{ section.col_3.content }}</p>
+        <p><center>{{ section.col_3.content }}</center></p>
       </div>            
       <div class="col s12 m3">
         <h5><center>{{ section.col_4.headline }}</center></h5>
-        <p>{{ section.col_4.content }}</p>
+        <p><center>{{ section.col_4.content }}</center></p>
       </div>            
     </div>
   </div>
