--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -5,7 +5,7 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
   <div class="container">
     <div class="columns">
       <div class="column text">
-        <h1 style="color:white;"><span class="light">{{ section.headline }}</span></h1>
+        <h1 style="color:white;"><span class="bold">{{ section.headline }}</span></h1>
         <p style="color:white;">{{ section.content }}</p>
         {% if section.cta and section.cta.enabled == true %}
         <a class="button primary inverted" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
