--- a/_includes/block-feature-2.html
+++ b/_includes/block-feature-2.html
@@ -5,7 +5,7 @@
           <img src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}">
       </div>
       <div class="column text">
-          <h2><span class="light">{{ section.headline }}</span></h2>
+        <h2><center><span class="light">{{ section.headline }}</span></center></h2>
           <p>{{ section.content }}</p>
       </div>  
     </div>
