--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -1,10 +1,19 @@
+<div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Speeds up development</h5>
+
 <section class="block block-three-column-1">
   <div class="container">
     <div class="row">
       <div class="col s12 m3">
+        <div class="icon-block">
+          <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
         <h5><center>{{ section.col_1.headline }}</center></h5>
         <p><center>{{ section.col_1.content }}</center></p>
       </div>
+     </div>
       <div class="col s12 m3">
         <h5><center>{{ section.col_2.headline }}</center></h5>
         <p><center>{{ section.col_2.content }}</center></p>
