--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -9,23 +9,28 @@
     <div class="row">
       <div class="col s12 m3">
         <div class="icon-block">
-          <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
         <h5><center>{{ section.col_1.headline }}</center></h5>
         <p><center>{{ section.col_1.content }}</center></p>
       </div>
      </div>
       <div class="col s12 m3">
+              <div class="icon-block">
         <h5><center>{{ section.col_2.headline }}</center></h5>
         <p><center>{{ section.col_2.content }}</center></p>
       </div>
+              </div>
       <div class="col s12 m3">
+               <div class="icon-block">
         <h5><center>{{ section.col_3.headline }}</center></h5>
         <p><center>{{ section.col_3.content }}</center></p>
-      </div>            
+      </div>  
+              </div> 
       <div class="col s12 m3">
+              <div class="icon-block">
         <h5><center>{{ section.col_4.headline }}</center></h5>
         <p><center>{{ section.col_4.content }}</center></p>
-      </div>            
+      </div>    
+              </div>  
     </div>
   </div>
 </section>
