--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -6,18 +6,23 @@
     <div class="row">
       <div class="col s12 m3">
         <div class="icon-block">
+        <h1 class="center light-blue-text"><i class="material-icons">cloud_upload</i></h1>
         <h5><center>{{ section.col_1.headline }}</center></h5>
         <p><center>{{ section.col_1.content }}</center></p>
       </div>
      </div>
       <div class="col s12 m3">
               <div class="icon-block">
+                
+        <h1 class="center light-blue-text"><i class="material-icons">rotate_left</i></h1>
         <h5><center>{{ section.col_2.headline }}</center></h5>
         <p><center>{{ section.col_2.content }}</center></p>
       </div>
               </div>
       <div class="col s12 m3">
                <div class="icon-block">
+                         <h1 class="center light-blue-text"><i class="material-icons">drag_indicator</i></h1>
+
         <h5><center>{{ section.col_3.headline }}</center></h5>
         <p><center>{{ section.col_3.content }}</center></p>
       </div>  
