--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -21,14 +21,14 @@
               </div>
       <div class="col s12 m3">
                <div class="icon-block">
-                         <h1 class="center light-blue-text"><i class="material-icons">drag_indicator</i></h1>
-
+      <h1 class="center light-blue-text"><i class="material-icons">drag_indicator</i></h1>
         <h5><center>{{ section.col_3.headline }}</center></h5>
         <p><center>{{ section.col_3.content }}</center></p>
       </div>  
               </div> 
       <div class="col s12 m3">
               <div class="icon-block">
+        <h1 class="center light-blue-text"><i class="material-icons">setting</i></h1>
         <h5><center>{{ section.col_4.headline }}</center></h5>
         <p><center>{{ section.col_4.content }}</center></p>
       </div>    
