--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -14,7 +14,7 @@
       <div class="col s12 m3">
               <div class="icon-block">
                 
-        <h1 class="center light-blue-text"><i class="material-icons">rotate_left</i></h1>
+        <h1 class="center light-blue-text"><i class="material-icons">mouse</i></h1>
         <h5><center>{{ section.col_2.headline }}</center></h5>
         <p><center>{{ section.col_2.content }}</center></p>
       </div>
@@ -28,7 +28,7 @@
               </div> 
       <div class="col s12 m3">
               <div class="icon-block">
-        <h1 class="center light-blue-text"><i class="material-icons">setting</i></h1>
+        <h1 class="center light-blue-text"><i class="material-icons">settings</i></h1>
         <h5><center>{{ section.col_4.headline }}</center></h5>
         <p><center>{{ section.col_4.content }}</center></p>
       </div>    
