--- a/_includes/block-feature-1.html
+++ b/_includes/block-feature-1.html
@@ -1,7 +1,8 @@
 {% if section.media_alignment and section.media_alignment == "Left" %}
 {% include block-feature-2.html %}
 {% else %}
-<section class="block block-feature-1">
+<section style="background-color: rgba(0, 0, 0, 0.8)" class="block block-feature-1">
+  
   <div class="container">
     <div class="columns">
       <div class="column text">
