--- a/_includes/block-feature-1.html
+++ b/_includes/block-feature-1.html
@@ -6,8 +6,8 @@
   <div class="container">
     <div class="columns">
       <div class="column text">
-        <h2><span class="light">{{ section.headline }}</span></h2>
-        <p>{{ section.content }}</p>
+        <h2><span class="light" ><span style="color:white">{{ section.headline }}</span></h2>
+        <p><span style="color:white">{{ section.content }}</p>
       </div>
       <div class="column media">
         <img src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}">
