--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -1,18 +1,16 @@
 <header class="block block-header-2">
 
-  <div class="block-header-2--logo">
-    <a href="{{ site.url | relative_url }}">
-      <img src="{{ section.logo | relative_url }}" alt="{{ site.title }}">
-    </a>
-  </div>
-
-  <nav class="block-header-2--nav">
-    <ul>
+<nav class="block-header-2--nav">
+     <div class="nav-wrapper">
+      <a class="left brand-logo" href="{{ site.url | relative_url }}">
+        <img src="{{ section.logo | relative_url }}" alt="{{ site.title }}"></a>
+      <ul id="nav-mobile" class="left block-header-2--nav">
         {% for nav_item in section.navigation %}
         <li class="nav-item {% if page.url == nav_item.link %}active{% endif %}"><a href="{{ nav_item.link }}">{{ nav_item.link_text }}</a></li>
         {% endfor %}
-    </ul>
-    <a class="button primary small block-header-2--cta" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
+          
+      </ul>
+    </div>
+    <a class="button primary small block-header-2--cta" href="https://github.com/forestryio/ubuild-jekyll/archive/master.zip">GET STARTED</a>
   </nav>
-
 </header>
