--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -4,7 +4,7 @@
      <div class="nav-wrapper">
       <a class="left brand-logo" href="{{ site.url | relative_url }}">
         <img src="{{ section.logo | relative_url }}" alt="{{ site.title }}"></a>
-      <ul id="nav-mobile" class="left block-header-2--nav">
+      <ul id="nav-mobile" class="right block-header-2--nav">
         {% for nav_item in section.navigation %}
         <li class="nav-item {% if page.url == nav_item.link %}active{% endif %}"><a href="{{ nav_item.link }}">{{ nav_item.link_text }}</a></li>
         {% endfor %}
