--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -1,6 +1,6 @@
 <header class="block block-header-2">
 
-<nav class="block-header-2--nav" background:white>
+<nav class="block-header-2--nav" background-color:white>
      <div class="nav-wrapper">
       <a class="left brand-logo" href="{{ site.url | relative_url }}">
         <img src="{{ section.logo | relative_url }}" alt="{{ site.title }}"></a>
