--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -14,3 +14,8 @@
     <a class="button primary small block-header-2--cta" href="https://github.com/forestryio/ubuild-jekyll/archive/master.zip">GET STARTED</a>
   </nav>
 </header>
+
+
+<style>
+  nav ul a { color: black; }
+</style>
