--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,11 @@
     <meta name="author" content="{{ site.author }}">
     <meta name="description" content="{{ site.description }}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
     <link href="./oren.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
    
     
-    <!link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.2.1/firebaseui.css" />
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/2.2.1/firebase-ui-auth.css" />
 
