--- a/_includes/oren.css
+++ b/_includes/oren.css
@@ -5,3 +5,5 @@ background-color: #673AB7 !important;
 h1 {
   font-family: 'Source Sans Pro', sans-serif !important;
 }
+
+nav.ul { color: black !important;}
