--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -22,5 +22,7 @@
 
 
 <style>
-  nav.ul a { color: black !important;}
+html {
+  font-family: 'Source Sans Pro', sans-serif !important;
+}
 </style>
