--- a/_includes/oren.css
+++ b/_includes/oren.css
@@ -3,7 +3,7 @@ background-color: #673AB7 !important;
 }
 
 .h1 {
-  font-family: 'Source Sans Pro', sans-serif !important;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 nav ul a { color: black !important;}
