--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -17,7 +17,19 @@
 
 
 <style>
-  nav ul a { color: black !important;}
+  nav ul a { 
+  color: black !important;
+  width: 43px;
+  height: 21px;
+  font-family: Aspira;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+}
+     
 </style>
 
 
