--- a/_includes/oren.css
+++ b/_includes/oren.css
@@ -1,7 +1,9 @@
 .nav {
 background-color: #673AB7 !important;
 }
-
+.btn {background-color: #ee261b
+!important ;
+}
 .h1 {
   font-family: 'Source Sans Pro', sans-serif;
 }
