--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -4,7 +4,7 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
 {% endif %}>
   <div class="container">
     <div class="columns">
-      <div class="column text">
+      <div class="column text" style="color:white">
         <h1><span class="light">{{ section.headline }}</span></h1>
         <p>{{ section.content }}</p>
         {% if section.cta and section.cta.enabled == true %}
