--- a/_includes/oren.css
+++ b/_includes/oren.css
@@ -9,3 +9,12 @@ background-color: #673AB7 !important;
 }
 
 nav ul a { color: black !important;}
+
+.nav ul a { 
+  color: black !important;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
+}
