--- a/_includes/oren.css
+++ b/_includes/oren.css
@@ -1,3 +1,13 @@
+nav ul a { 
+  color: black !important;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
+}
+
+
 .nav {
 background-color: #673AB7 !important;
 }
