--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -21,4 +21,13 @@
 html {
   font-family: 'Source Sans Pro', sans-serif !important;
 }
+     
+nav ul a { 		
+   color: black !important;		
+   font-size: 14px;		
+   font-weight: 500;		
+   font-style: normal;		
+   font-stretch: normal;		
+   letter-spacing: normal;		
+ }
 </style>
